--- a/less/element.less
+++ b/less/element.less
@@ -8,18 +8,12 @@
   width: 100%;
   display: table-cell;
   vertical-align: middle;
+  color: @text-color;
 
-  h1 {
+  header {
     margin-bottom: 12px;
     text-align: center;
     font-size: 30px;
     font-weight: 400;
-  }
-
-  h2 {
-    text-transform: uppercase;
-    font-size: 76px;
-    font-weight: 700;
-    color: @text-color;
   }
 }
