--- a/less/elements/number.less
+++ b/less/elements/number.less
@@ -1,30 +1,17 @@
 // Variables
 @number-background-color: @background-color;
-@number-title-color: @text-color;
 @number-value-color: @text-color;
-@number-description-color: @text-color;
 
 // Styles
 .element-number {
   background-color: @number-background-color;
 
-  .title {
-    color: @number-title-color;
-  }
-
   .value {
-    color: @number-value-color;
     margin-bottom: 20px;
-    min-height: 92px
-  }
-
-  .change-rate {
-    font-weight: 500;
-    font-size: 30px;
+    min-height: 92px;
+    text-transform: uppercase;
+    font-size: 76px;
+    font-weight: 700;
     color: @number-value-color;
-  }
-
-  .description {
-    color: @number-description-color;
   }
 }
