Added list element

--- a/less/informant.less
+++ b/less/informant.less
@@ -6,6 +6,7 @@
 
 // Individual widget styles
 @import "elements/number.less";
+@import "elements/list.less";
 @import "elements/graph.less";
 @import "elements/pie.less";
 
