Added bar element

--- a/less/informant.less
+++ b/less/informant.less
@@ -8,6 +8,7 @@
 @import "elements/number.less";
 @import "elements/list.less";
 @import "elements/graph.less";
+@import "elements/bar.less";
 @import "elements/pie.less";
 @import "elements/bubble.less";
 
