Added '.informant' to beginning of all css rules, changed 'element-wrapper' to 'wrapper'

--- a/less/informant.less
+++ b/less/informant.less
@@ -1,14 +1,15 @@
 // Variables that control all styles
 @import "variables.less";
 
-// Common element styles
-@import "element.less";
+.informant {
+  // Common element styles
+  @import "element.less";
 
-// Individual widget styles
-@import "elements/number.less";
-@import "elements/list.less";
-@import "elements/graph.less";
-@import "elements/bar.less";
-@import "elements/pie.less";
-@import "elements/bubble.less";
-
+  // Individual element styles
+  @import "elements/number.less";
+  @import "elements/list.less";
+  @import "elements/graph.less";
+  @import "elements/bar.less";
+  @import "elements/pie.less";
+  @import "elements/bubble.less";
+}
