--- a/less/element.less
+++ b/less/element.less
@@ -1,9 +1,9 @@
-.wrapper {
-  padding: 10px 10px;
-}
+// .wrapper {
+//   padding: 10px 10px;
+// }
 
 .element {
-  padding: 10px 10px;
+  // padding: 10px 10px;
   text-align: center;
   width: 100%;
   display: table-cell;
