Added filter element and basic example, adresses #1

--- a/less/informant.less
+++ b/less/informant.less
@@ -2,12 +2,16 @@
 @import "variables.less";
 
 .informant {
+  // Mixins
+  @import "mixins.less";
+
   // Common element styles
   @import "element.less";
 
   // Individual element styles
   @import "elements/number.less";
   @import "elements/list.less";
+  @import "elements/filter.less";
   @import "elements/graph.less";
   @import "elements/bar.less";
   @import "elements/pie.less";
