--- a/less/elements/bubble.less
+++ b/less/elements/bubble.less
@@ -19,7 +19,7 @@
 
       text {
         opacity: 0.6;
-        fill: @bubble-stroke-color;
+        fill: @bubble-fill-color;
       }
     }
 
@@ -27,6 +27,10 @@
       font-size: 12px;
       opacity: 0.4;
       stroke: @bubble-stroke-color;
+
+      text {
+        fill: @graph-fill-color;
+      }
     }
 
     .grid-line line {
