--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,32 @@
 // Colors
-@background-color: #e4e4e4;
-@text-color: rgba(0, 0, 0, 0.6);
-@border-color: rgba(0, 0, 0, 0.4);
+@color: #2e2e2e;
+@background-color: white;
+
+@element-background-color: #e4e4e4;
+@element-header-color: rgba(0, 0, 0, 0.8);
+@element-footer-color: rgba(0, 0, 0, 0.6);
+@element-text-color: rgba(0, 0, 0, 0.6);
+@element-stroke-color: black;
+@element-fill-color: black;
+
+@button-border-color: rgba(0, 0, 0, 0.4);
+
+// Opacity
+@element-text-opacity: 0.5;
+@element-stroke-opacity: 0.6;
+@element-fill-opacity: 0.3;
+@element-axis-opacity: 0.4;
+@element-grid-opacity: 0.1;
+
+// Fonts
+@font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-weight: 400;
+
+@element-header-font-size: 30px;
+@element-footer-font-size: 20px;
+@element-prominent-font-size: 76px;
+@element-list-item-font-size: 18px;
+@element-axis-font-size: 12px;
+
+@element-selected-font-weight: 700;
+@element-list-item-font-weight: 500;
