--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,3 +3,20 @@
   -moz-border-radius: @radius;
   border-radius: @radius;
 }
+
+.button() {
+  display: inline-block;
+  min-width: 60px;
+  padding: 10px;
+  margin: 0 5px;
+
+  .border-radius();
+
+  cursor: pointer;
+
+  border: 2px solid @button-border-color;
+
+  &.selected {
+    border-width: 3px;
+  }
+}
