--- a/less/reset.less
+++ b/less/reset.less
@@ -1,54 +1,52 @@
-html {
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-body {
+& {
   margin: 0;
-  background-color: #ffffff;
+  color: @color;
+  background-color: @background-color;
   font-size: 20px;
-  color: #2e2e2e;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: @font-family;
+  font-weight: @font-weight;
 }
-b,
-strong {
+
+b, strong {
   font-weight: bold;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
   vertical-align: middle;
 }
-img,
-object {
+
+img, object {
   max-width: 100%;
 }
+
 iframe {
   max-width: 100%;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
 }
+
 td {
   vertical-align: middle;
 }
-ul,
-ol {
+
+ul, ol {
   padding: 0;
   margin: 0;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
+
+h1, h2, h3, h4, h5, p {
   padding: 0;
   margin: 0;
 }
+
