Fixed mismatched less variable in pie chart element

--- a/less/elements/pie.less
+++ b/less/elements/pie.less
@@ -1,7 +1,7 @@
 // Variables
 @pie-background-color : @element-background-color;
-@pie-text-color       : @element-text-color;
 @pie-stroke-color     : @element-stroke-color;
+@pie-text-color       : @element-fill-color;
 @pie-text-opacity     : @element-text-opacity;
 @pie-slice-opacity    : @element-fill-opacity;
 
